# video-segmentation

./: README.md
code/reference-code/gmm_0/: CMakeLists.txt  gmm_wavetrees.cpp
code/reference-code/graphcut/: graphcut.cpp
paper/: Segmentation.mmap
pose/SynchronicActivities_Stickmen_v1.0/: PCP_pami12_SynchronicActivities_Results.fig  README.txt
pose/SynchronicActivities_Stickmen_v1.0/code/: BatchEval.m  DirectEvalStickman.m  DrawStickman.m  EvalStickmenMulti.m  ReadStickmenAnnotationTxtMulti.m  calcPCPcurve.m  detBBFromStickmanSynchro.m  draw_bboxes.m  installmex.m  match_structs.m  me_isEmptyStick.m  startup.m
pose/SynchronicActivities_Stickmen_v1.0/data/: SynchronicActivities.txt
pose/pose-release/: pose-release1.2-basic.tgz
reference-code/: JAI.rar  Matting.rar
reference-code/CVPR12_SAS_code/: README
reference-code/JAI/include/: Jai_Types.h
reference-code/Matting/: Gpuopt.h  MattingPostProcess.h  opencv.h
reference-code/ViBe/ViBe效果/: README.TXT  license.txt  vibe-gui.tcl  vibe.bat
reference-code/ViBe/vibe C++代码/: BackGroundModel.cpp  BackGroundModel.dsp  BackGroundModel.dsw  BackGroundModel.h  BackGroundModel.ncb  BackGroundModel.opt  BackGroundModel.plg  BackGroundModel.sln  BackGroundModel.vcxproj  (+1 more)
reference-code/graphcut/: CMakeLists.txt
reference-code/keysegments/: README  keySegs_demo.m
seg_jxgu/: CMakeLists.txt  main.cpp
seg_jxgu/backgroundSubtraction_v0/: blob.h
seg_jxgu/grabcut/: grabcut.py
seg_jxgu/graphcut/GCv2p3/: CMakeLists.txt
seg_jxgu/graphcut/Interactive_Image_Segmentation/linux/: CMakeLists.txt  ImgSegment.h  Pixel.h  main.cpp
seg_jxgu/hog/: CMakeLists.txt  hog.cpp
segmentation-jxgu/: CMakeLists.txt  graphcut.cpp  index.html  seg.cpp
segmentation-jxgu/JAI/include/: Jai_Factory.h  Jai_Factory_Dynamic.h
segmentation-jxgu/JAI/lib/Win32_i86/: Jai_Factory.exp
segmentation-jxgu/Matting/: camera.cpp  camera.h  helper_cuda.h  kernel.cu  matting.cpp  matting.h  matting.vcxproj  mattingPostProcess.cpp
segmentation-jxgu/Matting/x64/Release/: kernel.cu.deps
segmentation-jxgu/Matting/x64/Release/matting.tlog/: cl.command.1.tlog  cl.read.1.tlog  matting.lastbuildstate
segmentation-jxgu/PyMaxflow-master/Cython-0.22.1-py2.7-linux-x86_64.egg/EGG-INFO/: SOURCES.txt  native_libs.txt
segmentation-jxgu/PyMaxflow-master/PyMaxflow.egg-info/: PKG-INFO  SOURCES.txt
segmentation-jxgu/PyMaxflow-master/maxflow/src/: _maxflow.cpp  _maxflow.h
segmentation-jxgu/trainHOG_cv/: CMakeLists.txt  train_HOG.cpp
video/: extract_video.m  extract_video.py
(+275 files in other folders)
