cmake_minimum_required(VERSION 2.8)
set(CMAKE_MODULE_PATH "/usr/local/lib/cmake/${CMAKE_MODULE_PATH}")
project( ImgSegmentation )
find_package( OpenCV REQUIRED )
set(SOURCES_files_Source_Files ImgSegment.cpp ImgSegment.h main.cpp Pixel.h)
source_group("Source Files" FILES ${SOURCES_files_Source_Files})
set(SOURCES_Source_Files ${SOURCES_files_Source_Files})
set(SOURCES_files_maxflow maxflow/block.h maxflow/graph.cpp maxflow/graph.h maxflow/maxflow.cpp)
source_group("maxflow" FILES ${SOURCES_files_maxflow})
set(SOURCES_maxflow  	${SOURCES_files_maxflow})
set(SOURCES_  		${SOURCES_Source_Files}	${SOURCES_maxflow})
include_directories(BEFORE ./linux)
add_executable(ImgSegmentation main.cpp)
link_libraries( ImgSegmentation /usr/local/lib)
target_link_libraries(ImgSegmentation ${OpenCV_LIBS})
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} /usr/local/lib/cmake/)
